--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/cli-service": "^3.12.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "chai": "^4.1.2",
+    "null-loader": "^4.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "typescript": "^3.4.3",
