--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "reset-css": "^5.0.1",
     "vue": "^2.6.10",
@@ -25,6 +26,7 @@
     "@vue/cli-plugin-unit-mocha": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
     "@vue/test-utils": "1.0.0-beta.29",
+    "axios-mock-adapter": "^1.18.1",
     "chai": "^4.1.2",
     "flush-promises": "^1.0.2",
     "null-loader": "^4.0.0",
