--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-class-component": "^7.0.2",
     "vue-match-heights": "^0.1.1",
     "vue-property-decorator": "^8.1.0",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vue-scrollto": "^2.18.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
