--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-match-heights": "^0.1.1",
+    "vue-parallaxy": "^1.1.1",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vue-scrollto": "^2.18.1"
